# clinical-trial-signal-detection

./: .env.example  .gitignore  README.md  config.py  models.py  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  detector.py  synapse_client.py
api/: main.py
docs/: DEMO.md
frontend/static/: app.js  index.html  style.css
infra/terraform/: main.tf
simulator/: __init__.py  fixtures.json  runner.py
stream_analytics/: signal_query.sql
synapse/notebooks/: gold_signal_aggregation.py
tests/: conftest.py  test_api_smoke.py  test_integration.py  test_signal_detection.py
